// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard: structure active state 1`] = `
<div
  class="style_dashboard__3um69 style_is-active__3ctG-"
  id="my-dashboard"
>
  Active dashboard
</div>
`;

exports[`Dashboard: structure default component 1`] = `
<div
  class="style_dashboard__3um69"
  id="my-dashboard"
>
  content
</div>
`;
